feat: Shrine Pro features - 5 phases complete
Phase 1: Cart Experience
- AJAX cart without reloads
- Progress bar with 4 checkpoints
- Add to cart opens drawer automatically

Phase 2: Product CRO
- Quantity breaks (4 options, badges, discounts)
- Estimated shipping (dynamic dates)
- Bundle offers (3 products + global discount)

Phase 3: Theme Settings
- 8 animation styles + 6 easing curves
- Button hover effects (glow, slide, arrow)
- Micro-interactions (card lift, skeletons)

Phase 4: Special Sections
- Sticky add to cart (IntersectionObserver)
- Comparison slider (before/after)

Phase 5: Advanced Features
- Trust badges (4 configurable badges)
- Testimonials carousel (Splide, ratings, avatars)

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -421,6 +421,17 @@
       "message_placeholder": "Tell us more about your inquiry...",
       "select_option": "Select an option",
       "form_error": "Please correct the following errors:"
+    },
+    "shoppable": {
+      "view_product": "View product",
+      "select_product": "Select a product"
+    },
+    "stories": {
+      "view_story": "View story",
+      "close": "Close story",
+      "previous": "Previous story",
+      "next": "Next story",
+      "progress": "Story progress"
     }
   },
   "wishlist": {
